# sequencetoolkit

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  expanded.bed
.cross/aarch64-linux-gnu/: Dockerfile
.cross/target.x86_64-unknown-linux-gnu/: Dockerfile
.github/workflows/: docker.yml  rust.yml
bam2fastq/: Cargo.toml
bam2fastq/src/: lib.rs
bam2fastq/src/commands/: bam2fastq.rs  dnbseqreorder.rs  fastqcheck.rs  illuminareorder.rs  mod.rs  namegroup.rs  readgroup.rs
bam2fastq/src/utils/: fastq.rs  largereorder.rs  mod.rs  ora.rs  progress.rs
bamutils/: Cargo.toml
bamutils/src/: lib.rs
bamutils/src/commands/: concat_and_unify_read_group.rs  mod.rs  random_sampling.rs  rename_readname.rs  sequencing_error.rs
bamutils/src/logic/: mod.rs  sequencing_error.rs
bamutils/src/logic/sequencing_error/: mod.rs  test.rs
bamutils/testdata/: create.sh  demo1.bam  demo1.bam.bai  demo1.cram  demo1.cram.crai  demo1.fastq  demo1.sam  known_variants.vcf  known_variants.vcf.gz.csi  region-test.bed  target.bed
bamutils/testdata/ref/: MT.fa.ann
bedutils/: Cargo.toml
bedutils/src/: lib.rs  parser.rs
bedutils/src/commands/: extend_bed.rs  merge_bed.rs  mod.rs
bedutils/src/utils/: mod.rs
bedutils/testfiles/: sample1.bed
fastqutils/: Cargo.toml
fastqutils/src/: lib.rs
fastqutils/src/commands/: fastq_triplet.rs  index_count.rs  mod.rs  random_sampling.rs
fastqutils/testfiles/: NovaSeqX-TSPF-NA12878-UDI-A09_S17_L007_R1_001.fastq  NovaSeqX-TSPF-NA12878-UDI-A09_S17_L007_R2_001.fastq
fsutils/: Cargo.toml
fsutils/src/: lib.rs
fsutils/src/commands/: abspath.rs  autocat.rs  filterhash.rs  mod.rs
geneannot/: Cargo.toml
geneannot/src/: lib.rs
geneannot/src/annotator/: error.rs  mod.rs
geneannot/src/annotator/hgvs/: mod.rs  position.rs
geneannot/src/annotator/models/: fasta.rs  mod.rs  refgene.rs  test.rs
geneannot/src/commands/: create_db.rs  genome_position.rs  mod.rs  transcript_position.rs
sequencetoolkit/: Cargo.toml
sequencetoolkit/src/: main.rs
sequencetoolkit_common/: Cargo.toml
sequencetoolkit_common/src/: error.rs  lib.rs
src/: error.rs  main.rs
src/bedutils/: mod.rs  parser.rs
src/bedutils/commands/: expand_bed.rs  merge_bed.rs  mod.rs
src/bedutils/logic/: mod.rs
src/geneannot/: mod.rs
src/geneannot/annotator/: error.rs
src/geneannot/annotator/hgvs/: position.rs
src/geneannot/annotator/models/: fasta.rs  mod.rs  refgene.rs
src/geneannot/commands/: create_db.rs  genome_position.rs  transcript_position.rs
src/vcfutils/: error.rs  mod.rs
src/vcfutils/commands/: add_af.rs  add_contig.rs  extract_canonical.rs  generate_sql.rs  list_samples.rs  mod.rs  remove_nonstandard_header.rs  replace_contig.rs  replace_sample.rs  rewrite_format.rs  rewrite_info.rs  vcf2csv.rs
src/vcfutils/logic/: add_af.rs  add_contig.rs  generate_sql.rs  replace_contig.rs  replace_sample.rs  rewrite_format.rs  rewrite_info.rs  vcf2table.rs
src/vcfutils/utils/: mod.rs  recalc_af.rs  tablewriter.rs
testfiles/geneannot/genome/Influenza/: GCF_000865085.1_ViralMultiSegProj15622_genomic.fna.fai
testfiles/geneannot/genome/human/: .gitignore
testfiles/vcfutils/: 1kGP-mapping.csv  SRP225680__ISMMS_pt_91_WES_TUMOR.hs37d5-filtered.snpeff.vcf.gz.tbi  bad1.vcf  contig-mapping.csv  simple1-expected-multiallelic-split-snpeff.csv  simple1-snpeff.vcf  snpeff-log.txt
vcfutils/: Cargo.toml
vcfutils/src/: error.rs  lib.rs
vcfutils/src/commands/: add_af.rs  add_contig.rs  extract_canonical.rs  generate_sql.rs  list_samples.rs  mod.rs  remove_nonstandard_header.rs  replace_contig.rs  replace_sample.rs  rewrite_format.rs  rewrite_info.rs  vcf2csv.rs
vcfutils/src/logic/: add_af.rs  add_contig.rs  generate_sql.rs  mod.rs  replace_contig.rs  replace_sample.rs  rewrite_format.rs  rewrite_info.rs  vcf2table.rs
vcfutils/src/utils/: mod.rs  recalc_af.rs  tablewriter.rs
vcfutils/testfiles/: 1kGP-category.csv  1kGP-subset-snpeff.vcf  1kGP-subset.vcf  canonical.txt  category.csv  simple1-expected-multiallelic-split-snpeff-canonical.csv  simple1-expected-multiallelic-split-snpeff.csv  simple1-expected-multiallelic-split.csv  simple1-expected-no-split.csv  simple2.vcf
