[package]
name = "bam2fastq"
version = "0.1.0"
edition = "2021"
authors = ["Yasunobu Okamura"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "^0.44.1"
clap = { version = "4", features = ["derive", "cargo"] }
anyhow = "1"
url = "2.2"
flate2 = "1"
log = "^0.4.14"
crossbeam-channel = "0.5"
# zstd = "0.9"
regex = "1.5"
once_cell = "1.8.0"
autocompress = "0.5"
digest = "0.10.6"
md-5 = "0.10.5"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
temp-file = "0.1.7"
rayon = "1.8.0"
