[package]
name = "bamutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
sequencetoolkit_common = {path = "../sequencetoolkit_common"}
rust-htslib = "0.39.5"
bio = "0.41.0"
csv = "^1.1.6"
autocompress = "^0.2.2"
rand = "0.8.5"
anyhow = "1"
regex = "1"
once_cell = "1.13.0"