[package]
name = "bamutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
rust-htslib = "0.44"
bio = "1.4.0"
csv = "^1.1.6"
autocompress = "^0.2.2"
rand = "0.8.5"
anyhow = "1"
regex = "1"
once_cell = "1.13.0"
