[package]
name = "bedutils"
version = "0.1.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
sequencetoolkit_common = {path = "../sequencetoolkit_common"}
bio = "0.41.0"
bio-types = "0.13.0"
failure = "0.1"
autocompress = "0.2"
anyhow = "1"