[package]
name = "fastqutils"
version = "0.1.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
anyhow = "1"
autocompress = "0.6"
rayon = "1.8.0"
rand = "0.9"
