[package]
name = "fsutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
log = "0.4"
anyhow = "1"
autocompress = "0.6.0"
digest = "0.10.7"
md-5 = "0.10.6"
sha2 = "0.10.8"
sha1 = "0.10.6"
