[package]
name = "geneannot"
version = "0.1.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
flate2 = "1"
log = "0.4"
nom = "5"
bio = "1.4.0"
serde = "1"
serde_json = "1"
csv = "1"
bincode = "^1.2.1"
autocompress = "0.5"
vcf = "0.6"
anyhow = "1"
thiserror = "1"
