[package]
name = "sequencetoolkit"
version = "0.2.2"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
sequencetoolkit_common = {path = "../sequencetoolkit_common"}
bedutils = {path = "../bedutils"}
fastqutils = {path = "../fastqutils"}
geneannot = {path = "../geneannot"}
vcfutils = {path = "../vcfutils"}
bamutils = {path = "../bamutils"}
pretty_env_logger = "0.4"
log = "0.4"