[package]
name = "sequencetoolkit"
version = "0.4.5"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
bedutils = { path = "../bedutils" }
fastqutils = { path = "../fastqutils" }
geneannot = { path = "../geneannot" }
vcfutils = { path = "../vcfutils" }
bamutils = { path = "../bamutils" }
bam2fastq = { path = "../bam2fastq" }
fsutils = { path = "../fsutils" }
pretty_env_logger = "0.5"
log = "0.4"
anyhow = "1"
