[package]
name = "sequencetoolkit_common"
version = "0.1.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
csv = "1"
vcf = "0.5"
clap = "2"
rust-htslib = "0.39.5"
anyhow = "1"
