[package]
name = "vcfutils"
version = "0.1.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
bio = "1.4.0"
bio-types = "1"
#failure = "0.1"
autocompress = "0.2"
vcf = "0.6"
csv = "1"
xlsxwriter = { version = "0.6", features = ["no-md5", "system-zlib"] }
# libxlsxwriter-sys = "=1.1.4"
nom = "5"
itertools = "0.9"
serde = "1"
rand = "0.7"
itoa = "^0.4.6"
log = "0.4"
anyhow = "1"
thiserror = "1"
